--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
+    <h1 id="level" style="position: absolute; top:0; left: 45%; color: white;"></h1>
     <script src="bundle.js"></script>
 </body>
 </html>
