--- a/src/index.html
+++ b/src/index.html
@@ -15,5 +15,12 @@
 <body>
     <h1 id="level" style="position: absolute; top:0; left: 45%; color: white;"></h1>
     <script src="bundle.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D66SVX9Y14"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-D66SVX9Y14');
+    </script>
 </body>
 </html>
