--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Three.js Platformer Game</title>
+    <title>Cube Jumb</title>
+      <!-- Meta Tags for SEO -->
+      <meta name="description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <meta name="keywords" content="Platformer, 3D, Three.js, Game, Web Game, Interactive, Cube, Jump">
+      <meta name="author" content="David Grayson dkgrayson@gmail.com">
+
+      <!-- Responsive viewport meta tag -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+
+      <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+      <meta property="og:title" content="Cube Jump">
+      <meta property="og:description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <!-- <meta property="og:image" content="URL_to_thumbnail_image_for_your_game"> -->
+      <meta property="og:url" content="www.neighborswithmowers.com">
+      <meta property="og:type" content="website">
+
+      <!-- Twitter Card Meta Tags -->
+      <!-- <meta name="twitter:card" content="summary_large_image"> -->
+      <meta name="twitter:title" content="Cube Jump">
+      <meta name="twitter:description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <!-- <meta name="twitter:image" content="URL_to_thumbnail_image_for_your_game"> -->
+
     <style>
       body {
         margin: 0;
