enhancement: Add styles, title, and timer

--- a/src/index.html
+++ b/src/index.html
@@ -24,17 +24,13 @@
     <!-- <meta name="twitter:image" content="URL_to_thumbnail_image_for_your_game"> -->
 
   <style>
-    body {
-      margin: 0;
-    }
 
-    canvas {
-      display: block;
-    }
   </style>
+  <!-- <link rel="stylesheet" type="text/css" href="styles/app.css" /> -->
 </head>
 <body>
-  <h1 id="level" style="position: absolute; top:0; left: 45%; color: white;"></h1>
+  <h1 class="level"></h1>
+  <div class="timer">Time: 00:00</div>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D66SVX9Y14"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
