enhancement: Add mobile controls

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
 <body>
   <h1 class="level"></h1>
   <div class="timer">Time: 00:00</div>
+  <div id="joystick-container" class="joystick_container">
+    <div id="joystick" class="joystick"></div>
+  </div>
+  <div id="jump-button" class="jump_button"></div>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-D66SVX9Y14"></script>
   <script>
       window.dataLayer = window.dataLayer || [];
