enhancement: Add starting menu

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,12 @@
 </head>
 <body>
   <h1 class="level"></h1>
-  <div class="timer">Time: 00:00</div>
+  <div class="timer"></div>
+  <div class="intro" id="intro">
+    <h1>Welcome to whatever this is!</h1>
+    <p>Use W, A, S, D keys to move and SPACE to jump.</p>
+    <button id="startButton">Start Game</button>
+  </div>
   <div id="joystick-container" class="joystick_container">
     <div id="joystick" class="joystick"></div>
   </div>
