enhancement: Social imaages

--- a/src/index.html
+++ b/src/index.html
@@ -1,51 +1,46 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Cube Jumb</title>
-    <!-- Meta Tags for SEO -->
-    <meta name="description" content="A fun and interactive 3D platformer game built with Three.js.">
-    <meta name="keywords" content="Platformer, 3D, Three.js, Game, Web Game, Interactive, Cube, Jump">
-    <meta name="author" content="David Grayson dkgrayson@gmail.com">
+  <!DOCTYPE html>
+  <html>
+  <head>
+    <title>Cube Jumb</title>
+      <!-- Meta Tags for SEO -->
+      <meta name="description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <meta name="keywords" content="Platformer, 3D, Three.js, Game, Web Game, Interactive, Cube, Jump">
+      <meta name="author" content="David Grayson https://www.linkedin.com/in/dkgrayson/">
 
-    <!-- Responsive viewport meta tag -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Responsive viewport meta tag -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
-    <meta property="og:title" content="Cube Jump">
-    <meta property="og:description" content="A fun and interactive 3D platformer game built with Three.js.">
-    <!-- <meta property="og:image" content="URL_to_thumbnail_image_for_your_game"> -->
-    <meta property="og:url" content="www.neighborswithmowers.com">
-    <meta property="og:type" content="website">
+      <!-- Open Graph Meta Tags for Facebook and LinkedIn -->
+      <meta property="og:title" content="Cube Jump">
+      <meta property="og:description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <meta property="og:image" content="https://imgur.com/a/CaXv6tD">
+      <meta property="og:url" content="www.neighborswithmowers.com">
+      <meta property="og:type" content="website">
 
-    <!-- Twitter Card Meta Tags -->
-    <!-- <meta name="twitter:card" content="summary_large_image"> -->
-    <meta name="twitter:title" content="Cube Jump">
-    <meta name="twitter:description" content="A fun and interactive 3D platformer game built with Three.js.">
-    <!-- <meta name="twitter:image" content="URL_to_thumbnail_image_for_your_game"> -->
-
-  <style>
-
-  </style>
-  <!-- <link rel="stylesheet" type="text/css" href="styles/app.css" /> -->
-</head>
-<body>
-  <h1 class="level"></h1>
-  <div class="timer"></div>
-  <div class="intro" id="intro">
-    <h1>Welcome to whatever this is!</h1>
-    <p>Use W, A, S, D keys to move and SPACE to jump.</p>
-    <button id="startButton">Start Game</button>
-  </div>
-  <div id="joystick-container" class="joystick_container">
-    <div id="joystick" class="joystick"></div>
-  </div>
-  <div id="jump-button" class="jump_button"></div>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D66SVX9Y14"></script>
-  <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-D66SVX9Y14');
-  </script>
-</body>
-</html>
+      <!-- Twitter Card Meta Tags -->
+      <meta name="twitter:card" content="assets/preview.png">
+      <meta name="twitter:title" content="Cube Jump">
+      <meta name="twitter:description" content="A fun and interactive 3D platformer game built with Three.js.">
+      <meta name="twitter:image" content="https://imgur.com/a/CaXv6tD">
+  </head>
+  <body>
+    <h1 class="level"></h1>
+    <div class="timer"></div>
+    <div class="intro" id="intro">
+      <h1>Welcome to whatever this is!</h1>
+      <p>Use W, A, S, D keys to move and SPACE to jump.</p>
+      <button id="startButton">Start Game</button>
+    </div>
+    <div id="joystick-container" class="joystick_container">
+      <div id="joystick" class="joystick"></div>
+    </div>
+    <div id="jump-button" class="jump_button"></div>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D66SVX9Y14"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-D66SVX9Y14');
+    </script>
+  </body>
+  </html>
