enhancement: Add ultimate level and obstacles

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <div class="intro" id="intro">
       <h1>Welcome to whatever this is!</h1>
       <p>Use W, A, S, D keys to move and SPACE to jump.</p>
-      <button id="startButton">Start Game</button>
+      <button class="start" id="start">Start Game</button>
     </div>
     <div id="joystick-container" class="joystick_container">
       <div id="joystick" class="joystick"></div>
