enhancement: Track deaths

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
   <body>
     <h1 class="level"></h1>
     <div class="timer"></div>
+    <div class="deaths">Deaths: 0</div>
     <div class="intro" id="intro">
       <h1>Welcome to whatever this is!</h1>
       <p>Use W, A, S, D keys to move and SPACE to jump.</p>
