enhancement: Win screen

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,12 @@
       <p>Use W, A, S, D keys to move and SPACE to jump.</p>
       <button class="start" id="start">Start Game</button>
     </div>
+    <div class="outro" id="outro">
+      <h1>Congratulations, you won!</h1>
+      <p class="social">If you enjoyed this game feel free to <a href="https://www.linkedin.com/in/dkgrayson/" target="_blank">find me</a></p>
+      <div class="stats_deaths" id="stats-deaths"></div>
+      <div class="stats_time" id="stats-time"></div>
+    </div>
     <div id="joystick-container" class="joystick_container">
       <div id="joystick" class="joystick"></div>
     </div>
