--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <div class="timer"></div>
     <div class="deaths">Deaths: 0</div>
     <div class="intro" id="intro">
-      <h1>Welcome to whatever this is! (Hi Poland!!!)</h1>
+      <h1>Welcome to whatever this is!</h1>
       <p>Use W, A, S, D keys to move and SPACE to jump.</p>
       <button class="start" id="start">Start Game</button>
     </div>
